--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,15 @@ navigation: # Navigation links
 
 
 tagline: >
-  The Portfolio portfolio for Salvador Aleguas
+  Scroll down to see some of my awesome projects!
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: salvadoraleguas@gmail.com # email for form submission
 
 github_username:  saleguas # replace with your_github_username or comment to remove link from footer
-
+linkedin_username: saleguas
+medium_username: salvadoraleguas
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
 service_worker: true
